调整activation